<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.alysondantas.sac_mariana.MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:id="@+id/buttonCadPessoa"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:onClick="cadastrar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edtexc"
        android:id="@+id/buttonEditPessoa"
        android:layout_alignTop="@+id/buttonCadPessoa"
        android:layout_toEndOf="@+id/buttonCadPessoa"
        android:onClick="editar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar"
        android:id="@+id/buttonListPessoa"
        android:layout_alignTop="@+id/buttonEditPessoa"
        android:layout_toEndOf="@+id/buttonEditPessoa"
        android:onClick="listarProdutos"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doador"
        android:id="@+id/textView2"
        android:layout_below="@+id/buttonCadPessoa"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:id="@+id/buttonCadastrarDoador"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:onClick="cadastrarDoador"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edtexc"
        android:id="@+id/buttonEditarDoador"
        android:layout_alignTop="@+id/buttonCadastrarDoador"
        android:layout_alignStart="@+id/buttonEditPessoa"
        android:onClick="editarDoador"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar"
        android:id="@+id/button8"
        android:layout_alignTop="@+id/buttonEditarDoador"
        android:layout_toEndOf="@+id/buttonEditarDoador" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doacao"
        android:id="@+id/textView3"
        android:layout_below="@+id/buttonCadastrarDoador"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:id="@+id/buttonCadDoacao"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:onClick="cadastrarDoacao"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edtexc"
        android:id="@+id/button10"
        android:layout_alignBottom="@+id/buttonCadDoacao"
        android:layout_alignStart="@+id/buttonEditarDoador"
        android:onClick="editarexcluirDoacao"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar"
        android:id="@+id/button11"
        android:layout_alignBottom="@+id/button10"
        android:layout_toEndOf="@+id/button10" />
</RelativeLayout>
